--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "mocha": "^5.0.1",
     "path": "^0.12.7",
     "pg": "^7.4.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
