fix appname again

--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ deployment:
   production:
     branch: master
     heroku:
-      appname: coloradogovtrackerg
+      appname: governortrackerco
 
 test:
   override:
