--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "test": "./node_modules/.bin/mocha --exit",
     "eslint": "./node_modules/eslint/bin/eslint.js ./*.js ./db/*.js ./db/*/*.js ./db/*/*/*.js ./test/*.js --fix"
-
   },
   "dependencies": {
     "babel-eslint": "^8.2.1",
@@ -26,6 +25,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "victory": "^0.25.6",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
