--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "datamaps": "^0.5.8",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "glamorous": "^4.11.6",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.3",
+    "mineral-ui": "^0.20.0",
     "mocha": "^5.0.1",
     "path": "^0.12.7",
     "pg": "^7.4.1",
