--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "datamaps": "^0.5.8",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.3",
     "mocha": "^5.0.1",
