--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scrollchor": "^4.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "topojson": "^3.0.2",
