--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chai-http": "^3.0.0",
     "d3": "^3.5.13",
     "datamaps": "^0.5.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
